--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,7 +9,13 @@ jobs:
           - name: List files
             run: |
               pwd
-              ls
+              ls -a
+          - name: Checkout
+            uses: actions/checkout@v2.3.3
+          - name: List files after checkout
+            run: |
+              pwd
+              ls -a  
           - name: simple javascript action
             id: greet
             uses: actions/hello-world-javascript-action@master
