every 5 mins cron

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,9 @@
 name: Actions workflow
 
 on:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+  schedule:
+    - cron: "*/5 * * * *"
+
 jobs:
     run-github-actions:
       runs-on: ubuntu-latest
