--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,13 +1,15 @@
 name: Actions workflow
 
 on:
-  schedule:
-    - cron: "*/5 * * * *"
+  repository_dispatch:
+    types: [build]
 
 jobs:
     run-github-actions:
       runs-on: ubuntu-latest
       steps:
+          - name: Dispatcher Client Payload
+            run: echo ${{ github.event.client_payload.env }} 
           - name: List the files
             run: |
               pwd
