--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -2,8 +2,7 @@ name: shell commands
 
 on:
   schedule:
-      - cron: "0/5 * * * *"
-      - cron: "0/6 * * * *"
+      - cron: '*/5 * * * *'      
   pull_request:
 
 jobs:
