--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,6 +5,16 @@ env:
   WF_ENV: Available to all jobs
 
 jobs:
+  decrypt-file:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v1
+        - name: Decrypt files
+          run: gpg --quite --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secrets.json mysecrets.json.gpg 
+          env:
+            PASSPHRASE: ${{ secrets.PASSPHRASE }}
+        - name: Print decrypt files content
+          run: cat $HOME/secrets.json
   create-issue:
     runs-on: ubuntu-latest
     steps:
