--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
         - uses: actions/checkout@v1
         - name: Decrypt files
-          run: gpg --quite --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secrets.json mysecrets.json.gpg 
+          run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secrets.json mysecrets.json.gpg 
           env:
             PASSPHRASE: ${{ secrets.PASSPHRASE }}
         - name: Print decrypt files content
