--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,7 +7,7 @@ jobs:
    steps:
        - name: Log node version
          run: node -v
-       - uses: actions/checkout@v2
+       - uses: actions/setup-node@v1
          with:
            node-version: 6
        - name: Log node specific version
