--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   node-docker:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     container: 
       image: node:15.0.1-alpine3.10
     steps:
