--- a/.github/workflows/initiate-worflowdispatch.yml
+++ b/.github/workflows/initiate-worflowdispatch.yml
@@ -19,8 +19,7 @@ jobs:
           --header 'content-type: application/json' \
           --data '{
                "ref":"master",
-               "inputs": {
-                  "VERSION": "0.1.1",
-                  "APPNAME": ${{ github.event.repository.name }}                
+               "inputs": {                  
+                  "APPNAME": "${{ github.event.repository.name }}"
                }
             }'
