--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
      - name: Echo Dispatcher inputs
        run: |
-         echo ${{ github.event.inputs.VERSION }}
-         echo ${{ github.event.inputs.APPNAME }}
+         echo ${{ inputs.VERSION }}
+         echo ${{ inputs.APPNAME }}
   replace-file-content:
     name: Replace file contents
     runs-on: ubuntu-latest
@@ -29,8 +29,8 @@ jobs:
          uses: actions/checkout@v2
        - name: content with file replacement
          run: |
-          sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }}/g" ./testfile.json
-          sed -i "s/#VERSION#/${{ github.event.inputs.VERSION }}/g" ./testfile.json
+          sed -i "s/#APP-NAME#/${{ inputs.APPNAME }}/g" ./testfile.json
+          sed -i "s/#VERSION#/${{ inputs.VERSION }}/g" ./testfile.json
           cat ./testfile.json
               
            
