--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,8 +29,8 @@ jobs:
          uses: actions/checkout@v2
        - name: content with file replacement
          run: |
-          sed -i "s/#APP-NAME#/${{ inputs.APPNAME }}/g" ./testfile.json
-          sed -i "s/#VERSION#/${{ inputs.VERSION }}/g" ./testfile.json
+          sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }}/g" ./testfile.json
+          sed -i "s/#VERSION#/${{ github.event.inputs.VERSION }}/g" ./testfile.json
           cat ./testfile.json
               
            
