--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
      - name: Echo Dispatcher inputs
        run: |
-         echo ${{ inputs.VERSION }}
-         echo ${{ inputs.APPNAME }}
+         echo ${{ github.event.inputs.VERSION }}
+         echo ${{ github.event.inputs.APPNAME }}
   replace-file-content:
     name: Replace file contents
     runs-on: ubuntu-latest
