--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
      - name: Echo Dispatcher inputs
        run: |
          echo ${{ github.event.inputs.VERSION }}
-         echo ${{ github.event.inputs.APPNAME,, }}
+         echo ${ ${{ github.event.inputs.APPNAME }},, }
   replace-file-content:
     name: Replace file contents
     runs-on: ubuntu-latest
