--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,8 +20,9 @@ jobs:
      - name: Echo Dispatcher inputs
        run: |
          echo ${{ github.event.inputs.VERSION }}
-         appname = echo ${{ github.event.inputs.APPNAME }}
-         echo ${{ appname,, }}
+         echo ${{ github.event.inputs.APPNAME }}
+         appname = $(echo ${{ github.event.inputs.APPNAME }})
+         echo ${appname,,}
   replace-file-content:
     name: Replace file contents
     runs-on: ubuntu-latest
@@ -30,6 +31,7 @@ jobs:
          uses: actions/checkout@v2
        - name: content with file replacement
          run: |
+          echo awk '{print tolower($0)}' < ${{ github.event.inputs.APPNAME }} 
           sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }}/g" ./testfile.json
           sed -i "s/#VERSION#/${{ github.event.inputs.VERSION }}/g" ./testfile.json
           cat ./testfile.json
