--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,8 +20,7 @@ jobs:
      - name: Echo Dispatcher inputs
        run: |
          echo ${{ github.event.inputs.VERSION }}
-         echo ${{ github.event.inputs.APPNAME }}         
-         echo ${${{ github.event.inputs.APPNAME }},,}
+         echo ${{ github.event.inputs.APPNAME }}
   replace-file-content:
     name: Replace file contents
     runs-on: ubuntu-latest
@@ -30,7 +29,7 @@ jobs:
          uses: actions/checkout@v2
        - name: content with file replacement
          run: |          
-          sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }}/g" ./testfile.json
+          sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }} | tr [A-Z] [a-z]/g" ./testfile.json
           sed -i "s/#VERSION#/${{ github.event.inputs.VERSION }}/g" ./testfile.json
           cat ./testfile.json
               
