--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
          uses: actions/checkout@v2
        - name: content with file replacement
          run: |          
-          sed -i "s/#APP-NAME#/${{ github.event.inputs.APPNAME }} | tr [A-Z] [a-z]/g" ./testfile.json
+          sed -i "s/#APP-NAME#/$(echo ${{ github.event.inputs.APPNAME }} | tr [A-Z] [a-z])/g" ./testfile.json
           sed -i "s/#VERSION#/${{ github.event.inputs.VERSION }}/g" ./testfile.json
           cat ./testfile.json
               
