--- a/.github/workflows/publish-artifacts.yml
+++ b/.github/workflows/publish-artifacts.yml
@@ -16,5 +16,5 @@ jobs:
       - name: publish artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: war-file
+          name: test-file
           path: testfile.json     
