--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
      - name: Install jq
        run: |
-         RUN apt update && apt install -y jq gettext-base
+         apt update && apt install -y jq gettext-base
      - name: Get artifact id
        run: |
          echo artifactId = $(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/runs | jq -r '.artifacts[0].id?') >> $GITHUB_ENV
