--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -14,9 +14,11 @@ jobs:
        run: |
          echo $(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')
          echo ART_ID= curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?' >> $GITHUB_ENV
+         echo "action_state=yellow" >> $GITHUB_ENV
      - name: Download artifacts
        run: |
-         curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/${{ $ART_ID }}/zip
+         echo $action_state
+         curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/$ART_ID/zip
          ll -a
               
            
