--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: Get artifact id
+       shell: bash
        run: |
-         echo $(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')    
-         echo "action_state=yellow" >> $GITHUB_ENV
+         echo artifactId = $(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?') >> $GITHUB_ENV
      - name: Download artifacts
+       shell: bash
        run: |
-         echo $action_state
-         curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip
-         ll -a
-              
-           
+         curl --request GET \
+          --url https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip \
+          --header 'authorization: token ${{ env.GITHUB_ACCESS_TOKEN }}' \
+          --header 'Accept: application/vnd.github.v3+json' \                   
+         ll -a                         
