--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -19,6 +19,6 @@ jobs:
        run: |
          curl --request GET \
           --url https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip \
-          --header 'authorization: token ${{ env.PERSONAL_ACCESS_TOKEN }}' \
+          --header 'authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}' \
           --header 'Accept: application/vnd.github.v3+json' \                   
          ll -a                         
