--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -17,8 +17,8 @@ jobs:
      - name: Download artifacts
        shell: bash
        run: |
-         curl --request GET \
+         curl -L --request GET \
           --url https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip \
           --header 'authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}' \
           --header 'Accept: application/vnd.github.v3+json' \                   
-         ll -a                         
+         ll -a
