--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -20,4 +20,6 @@ jobs:
          curl -L \
             -H "authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip
+            https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip \
+     - name: Display structure of downloaded files
+       run: ls -R
