--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -17,9 +17,11 @@ jobs:
      - name: Download artifacts
        shell: bash
        run: |
-         curl -L \
+         curl -o artifacts.zip -L \
             -H "authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/26805710/zip \
      - name: Display structure of downloaded files
-       run: ls -R
+       run: |
+         unzip artifacts.zip
+         ls -R
