--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -13,7 +13,8 @@ jobs:
      - name: Get artifact id
        shell: bash
        run: |
-         echo "ARTIFACT_ID=$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')" >> $GITHUB_ENV
+         ARTIFACT_ID=$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?') 
+         echo "::add-mask::$ARTIFACT_ID" >> $GITHUB_ENV
          echo "::add-mask::Mona The Octocat"
          MY_NAME="Mona The Octocat"
          echo "MY_NAME"
