--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -13,20 +13,14 @@ jobs:
      - name: Get artifact id
        shell: bash
        run: |
-         ARTIFACT_ID=$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?') 
-         echo "::add-mask::$ARTIFACT_ID" > ARTIFACTID 
-         echo "ART_ID=$ARTIFACTID" >> $GITHUB_ENV
-         echo "::add-mask::Mona The Octocat"
-         MY_NAME="Mona The Octocat"
-         echo "MY_NAME"
-         echo "::add-mask::$MY_NAME"         
+         echo "ARTIFACT_ID=::add-mask::$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')" >> $GITHUB_ENV               
      - name: Download artifacts
        shell: bash
        run: |
          curl -o artifacts.zip -L \
             -H "authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/$ART_ID/zip \
+            https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts/$ARTIFACT_ID/zip \
      - name: Display structure of downloaded files
        run: |
          unzip -o artifacts.zip
