--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -14,7 +14,7 @@ jobs:
        shell: bash
        run: |
          echo $(echo "Hello")
-         echo "ARTIFACT_ID=$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')" > /dev/null >> $GITHUB_ENV            
+         echo "ARTIFACT_ID=$(echo '::add-mask::$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')')"  >> $GITHUB_ENV            
      - name: Download artifacts
        shell: bash
        run: |
