--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -13,8 +13,8 @@ jobs:
      - name: Get artifact id
        shell: bash
        run: |
-         echo $(echo "Hello")
-         echo "ARTIFACT_ID=$(echo '::add-mask::$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')')"  >> $GITHUB_ENV            
+         ARTIFACT_ID_1 = $(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')
+         echo "ARTIFACT_ID=$(echo "::add-mask::$ARTIFACT_ID_1")"  >> $GITHUB_ENV            
      - name: Download artifacts
        shell: bash
        run: |
