--- a/.github/workflows/download-artifacts.yml
+++ b/.github/workflows/download-artifacts.yml
@@ -13,7 +13,7 @@ jobs:
      - name: Get artifact id
        shell: bash
        run: |
-         export ARTIFACT_ID=$(curl -sL https://api.github.com/repos/bv-sivakp/github-actions-example/actions/artifacts | jq -r '.artifacts[0].id?')          
+         echo "ARTIFACT_ID=${{ secrets.ARTIFACT_ID }}" >> $GITHUB_ENV
      - name: Download artifacts
        shell: bash
        run: |
