--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,10 @@ on:
         description: "Application name"
         required: true
         default: "web-api"
+      ARTIFACTID:
+        description: "ARTIFACT ID"
+        required: true
+        default: "lastCompleted"    
 
 jobs:
   verify-input-parameters:
@@ -27,6 +31,14 @@ jobs:
     steps:
        - name: Checkout
          uses: actions/checkout@v2
+       - name: Replace it with Input value
+         if: ${{ github.event.inputs.ArtifactId }} == 'lastCompleted'
+         run: |
+          sed -i "s/#ARTIFACT_ID#/${{ github.event.inputs.ARTIFACTID }}/g" ./testfile.json
+       - name: Replace it with Input value
+         if: ${{ github.event.inputs.ArtifactId }} != 'lastCompleted' && ${{ github.event.inputs.ArtifactId }} != ''
+         run: |
+          sed -i "s/#ARTIFACT_ID#/${{ github.event.inputs.ARTIFACTID }}/g" ./testfile.json       
        - name: content with file replacement
          run: |          
           sed -i "s/#APP-NAME#/$(echo ${{ github.event.inputs.APPNAME }} | tr [A-Z] [a-z])/g" ./testfile.json
