--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
        - name: Checkout
          uses: actions/checkout@v2
-       - name: Replace it with Input value
+       - name: Replace it wit latest
          if: ${{ github.event.inputs.ArtifactId }} == 'lastCompleted'
          run: |
           echo "ARTIFACT_ID=${{ github.event.inputs.ARTIFACTID }}" >> $GITHUB_ENV
