--- a/.github/workflows/initiate-worflowdispatch.yml
+++ b/.github/workflows/initiate-worflowdispatch.yml
@@ -20,6 +20,6 @@ jobs:
           --data '{
                "ref":"master",
                "inputs": {                  
-                  "APPNAME": "${{ github.event.repository.name }}"
+                  "APPNAME": $(echo ${{ github.event.repository.name }} | tr [a-z][A-Z] )
                }
             }'
