--- a/.github/workflows/initiate-worflowdispatch.yml
+++ b/.github/workflows/initiate-worflowdispatch.yml
@@ -20,6 +20,6 @@ jobs:
           --data '{
                "ref":"master",
                "inputs": {                  
-                  "APPNAME": $(echo ${{ github.event.repository.name }} | tr [a-z][A-Z] )
+                  "APPNAME": GITHUB-ACTIONS-EXAMPLE
                }
             }'
