--- a/.github/workflows/initiate-worflowdispatch.yml
+++ b/.github/workflows/initiate-worflowdispatch.yml
@@ -20,6 +20,6 @@ jobs:
           --data '{
                "ref":"master",
                "inputs": {                  
-                  "APPNAME": GITHUB-ACTIONS-EXAMPLE
+                  "APPNAME": "GITHUB-ACTIONS-EXAMPLE"
                }
             }'
