--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,8 @@ name: Run a scheduled job
 
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/10 * * * *'
 
 jobs:
   run-shell-command:
