--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,9 +1,10 @@
 name: Run a scheduled job
 
 on:
-  schedule:
+  workflow_dispatch:
+  #schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/10 * * * *'
+   # - cron:  '*/10 * * * *'
 
 jobs:
   run-shell-command:
