--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,6 +51,7 @@ jobs:
           cat ./testfile.json
        - name: Remove extension
          run: |
-           echo ${${{ github.event.inputs.FileName }}%.*}
+           FileName = ${{ github.event.inputs.FileName }}
+           echo ${FileName%.*}
               
            
