--- a/.github/workflows/publish-artifacts.yml
+++ b/.github/workflows/publish-artifacts.yml
@@ -27,6 +27,6 @@ jobs:
       - name: download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: test-file
+          name: testfile
       - name: Display structure of downloaded files
         run: ls -R
