--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,10 @@ on:
       FileName:
         description: "FileName"
         required: false
-        default: "Testfile.txt"       
+        default: "Testfile.txt"
+  push:
+    branches: 
+      - '**'             
 
 jobs:
   verify-input-parameters:
