Reverted the testing changes

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,24 @@
 name: workflow dispatch pipeline
 
 on:  
-  push:
-    branches: 
-      - '**'             
+  workflow_dispatch:
+    inputs:
+      VERSION:
+        description: "Version"
+        required: true
+        default: "0.1.0"
+      APPNAME:
+        description: "Application name"
+        required: true
+        default: "web-api"
+      ARTIFACTID:
+        description: "ARTIFACT ID"
+        required: true
+        default: "lastCompleted"
+      FileName:
+        description: "FileName"
+        required: false
+        default: "Testfile.txt"           
 
 jobs:
   verify-input-parameters:
