--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -31,7 +31,10 @@ jobs:
           echo "::add-mask::$the_secret"
           echo "::set-output name=secret-number::$the_secret"
       - run: |
-          echo "the secret number is ${{ steps.sets-a-secret.outputs.secret-number }}"  
+          echo "the secret number is ${{ steps.sets-a-secret.outputs.secret-number }}"
+      - run: |
+          RUN_INFO={"GITHUB_RUN_NUMBER": $GITHUB_RUN_NUMBER, "URL": $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID }
+          echo "Run info $RUN_INFO"
   run-windows-shell-command:
      runs-on: windows-latest
      needs: ["run-shell-command"]
