--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,11 @@ on:
       FileName:
         description: "FileName"
         required: false
-        default: "Testfile.txt"           
+        default: "Testfile.txt"
+      CheckDefaults:
+        description: "Check Defaults"
+        required: false
+        default: "false"  
 
 jobs:
   verify-input-parameters:
@@ -35,6 +39,14 @@ jobs:
     steps:
        - name: Checkout
          uses: actions/checkout@v2
+       - name: Check Defaults
+         run: |
+          if [ ${{ github.event.inputs.CheckDefaults }} == "true"  ]
+          then
+            echo "Check Defaults on true is ${{ github.event.inputs.CheckDefaults }}"
+          else
+            echo "Check Defaults on false or other  is ${{ github.event.inputs.CheckDefaults }}"
+          fi
        - name: Replace it wit latest
          if: github.event.inputs.ARTIFACTID == 'lastCompleted'
          run: |
